# back-flowlexai

./: .dockerignore  .env.gcp.example  .gitignore  Dockerfile  ingest_batch.py  param.py  pyproject.toml  requirements.txt  start_backend.cmd  startup.sh  test_connection.py  test_wfd_compliance.py
.github/workflows/: main_back-flowlexai.yml
app/: __init__.py  main.py
app/api/: deps.py
app/api/endpoints/: __init__.py  auditoria.py  auth.py  compare_router.py  drafting_router.py  (+5 more)
app/core/: config.py  email_alerts.py  email_service.py  health.py  llm.py  logger.py  security.py
app/db/: session.py
app/models/: __init__.py  auditoria.py  base.py  bias_report.py  draft.py  expediente.py  legislative.py  subscription.py  tenant.py  user.py  vector_storage.py
migrations/: env.py
migrations/versions/: 187fd47fed85_add_auditoria_and_hitl_tables.py  1e489178d31e_add_bias_report_tables.py  acefb4f68883_add_legislative_ontology_layer_1_and_2.py  c92a8d306bb8_add_user_table_for_iam_phase_1.py  d7e8f9a0b1c2_migrate_faiss_to_pgvector_embeddings.py  eda03ad677f2_add_hitl_review_tables.py  f4ffa005e048_add_subscription_table.py  f94b189c9060_add_ip_registry_tables.py
scratch/: docx_content.txt  read_docx.py
scripts/: clean_vector_store.py  generate_manuals.py  ingest_akn.py  ingest_gcp.py  ley_26363_ansv.xml  reset_and_reingest.py  seed_and_ingest_rag.py  seed_demo.py  seed_dev_user.py  seed_test_users.py  seed_vector_store.py  test_embeddings_real.py  test_openai_direct.py
tests/: test_gcp_smoke.py  test_impact_classifier.py  test_subscriptions.py  test_xai_engine.py
(+17 files in other folders)
