[tool.poetry]
name = "lexia-backend"
version = "0.1.0"
description = "FlowState AI - LexIA SaaS Platform Backend"
authors = ["Gustavo Berton"]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlmodel = "^0.0.16"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
pg8000 = "^1.31.5"
streamlit = "^1.55.0"
pandas = ">=2.2.0,<2.3.0"
requests = "^2.32.5"
plotly = "^6.6.0"
passlib = "^1.7.4"
bcrypt = "<4.1.0"
cryptography = "^46.0.5"
langgraph = "^1.0.10"
langchain-openai = "^1.1.10"
langchain-community = "^0.4.1"
pypdf = "^6.7.5"
PyJWT = "^2.8.0"
python-multipart = "^0.0.12"
numpy = "^2.4.4"
python-docx = "^1.2.0"
azure-identity = "^1.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
